Diferents canvis a la vista esdeveniment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PickAnEvent</string>
+    <string name="clock_icon">&#xf017;</string>
+    <string name="dollar_icon">&#xf155;</string>
 </resources>
