literales eliminados de los xml y añadidos a string.xml para futura localizacion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,38 @@
     <string name="map_icon">&#xf041;</string>
     <string name="loading">Retrieving data...</string>
     <string name="google_android_map_api_key">AIzaSyDcy7UoZ4LGYEBOp-8E4cJzsh1Tik9Hrro</string>
+    <string name="DEFAULT_NOMBRE">Nombre</string>
+    <string name="ESCRIBE_NOMBRE_EVENTO">Escriba el nombre del evento</string>
+    <string name="EVENTO_GRATUITO_PREG">El evento será gratuito?</string>
+    <string name="DEFAULT_CREAR_EVENTO">Crear Evento</string>
+    <string name="ESCRIBE_DESCRIPCION_EVENTO">Escribe la descripción de tu evento</string>
+    <string name="ESCRIBE_PRECIO_EVENTO">Escriba el precio del evento</string>
+    <string name="ESCRIBE_URL_ENTRADAS">En el caso que se puedan comprar online, escribe la URL de venta de entradas</string>
+    <string name="ESCRIBE_LUGAR_EVENTO">Escriba el lugar del evento</string>
+    <string name="PRIMER_DIA">Primer día</string>
+    <string name="ULTIMO_DIA">Último día (opcional)</string>
+    <string name="DEFAULT_GUARDAR_CAMBIOS">Guardar Cambios</string>
+    <string name="DEFAULT_FORMATO_FECHA">dd/mm/yyyy hh:mm</string>
+    <string name="DEFAULT_NOMBRE_USUARIO">Nombre del Usuario</string>
+    <string name="DEFAULT_GRUPOS">Grupos</string>
+    <string name="DEFAULT_EVENTOS">Eventos</string>
+    <string name="DEFAULT_VER_INFO_GRUPO">Ver información del grupo</string>
+    <string name="DEFAULT_VER_INFO_EVENTO">Ver información del evento</string>
+    <string name="DEFAULT_BUSCAR">Buscar</string>
+    <string name="DEFAULT_LOGIN">Login</string>
+    <string name="DEFAULT_USUARIO_LOGUEADO_PREG">Usuario conectado?</string>
+    <string name="DEFAULT_INFORMACION_OTRO_USUARIO">Información otro usuario</string>
+    <string name="DEFAULT_EDITAR_EVENTO">Editar evento</string>
+    <string name="DEFAULT_DESCRIPCION">Descripción</string>
+    <string name="DEFAULT_INFORMACION">Información</string>
+    <string name="DEFAULT_COMPRAR_ENTRADAS">Comprar Entradas!</string>
+    <string name="DEFAULT_LOCALIZACION">Localización</string>
+    <string name="DEFAULT_ASSISTIR">Asistir!</string>
+    <string name="DEFAULT_ASISTENCIA">Asistencia</string>
+    <string name="DEFAULT_SEGUIR">Seguir!</string>
+    <string name="DEFAULT_ETIQUETAS">Etiquetas</string>
+    <string name="DEFAULT_DATES_LLISTA_ESDEVENIMENT">1 i 2 de Octubre</string>
+    <string name="DEFAULT_BOTON">Button</string>
+    <string name="DEFAULT_SEGUNDA_LINEA">segunda linea</string>
 
 </resources>
