--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="DEFAULT_NOMBRE_USUARIO">Nombre del Usuario</string>
     <string name="DEFAULT_GRUPOS">Grupos</string>
     <string name="DEFAULT_EVENTOS">Eventos</string>
+    <string name="DEFAULT_PROXIMOS_EVENTOS">Proximos Eventos</string>
     <string name="DEFAULT_VER_INFO_GRUPO">Ver información del grupo</string>
     <string name="DEFAULT_VER_INFO_EVENTO">Ver información del evento</string>
     <string name="DEFAULT_BUSCAR">Buscar</string>
