BuscarEvento (filtra por titulo)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,14 +6,16 @@
     <string name="loading">Retrieving data...</string>
     <string name="google_android_map_api_key">AIzaSyDcy7UoZ4LGYEBOp-8E4cJzsh1Tik9Hrro</string>
     <string name="DEFAULT_NOMBRE">Nombre</string>
-    <string name="ESCRIBE_NOMBRE_EVENTO">Escriba el nombre del evento</string>
+    <string name="ESCRIBE_NOMBRE_EVENTO">Escribe el nombre del evento</string>
     <string name="EVENTO_GRATUITO_PREG">El evento será gratuito?</string>
     <string name="DEFAULT_CREAR_EVENTO">Crear Evento</string>
     <string name="DEFAULT_BUSCAR_EVENTO">Buscar Evento</string>
     <string name="ESCRIBE_DESCRIPCION_EVENTO">Escribe la descripción de tu evento</string>
-    <string name="ESCRIBE_PRECIO_EVENTO">Escriba el precio del evento</string>
+    <string name="ESCRIBE_PRECIO_EVENTO">Escribe el precio del evento</string>
     <string name="ESCRIBE_URL_ENTRADAS">En el caso que se puedan comprar online, escribe la URL de venta de entradas</string>
-    <string name="ESCRIBE_LUGAR_EVENTO">Escriba el lugar del evento</string>
+    <string name="ESCRIBE_LUGAR_EVENTO">Escribe el lugar del evento</string>
+    <string name="ERROR">Campo vacío</string>
+    <string name="EVENTO_NO_ENCONTRADO">Evento no encontrado</string>
     <string name="PRIMER_DIA">Primer día</string>
     <string name="ULTIMO_DIA">Último día (opcional)</string>
     <string name="DEFAULT_GUARDAR_CAMBIOS">Guardar Cambios</string>
@@ -56,7 +58,7 @@
     <string name="MES_DICIEMBRE">Diciembre</string>
     <string name="DEFAULT_EVENTO_CREADO">Evento creado</string>
     <string name="DEFAULT_CREAR_GRUPO">Crear grupo</string>
-    <string name="ESCRIBE_NOMBRE_GRUPO">Escriba el nombre del grupo</string>
+    <string name="ESCRIBE_NOMBRE_GRUPO">Escribe el nombre del grupo</string>
     <string name="ESCRIBE_DESCRIPCION_GRUPO">Escribe la descripción de tu grupo</string>
     <string name="ESCRIBE_TAG_PRINCIPAL_GRUPO">Escribe el tag principal de tu grupo</string>
     <string name="title_activity_navigation_drawer">NavigationDrawer</string>
