--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="DEFAULT_NO_ASSISTIR">No Asistir!</string>
     <string name="DEFAULT_ASISTENCIA">Asiste al evento</string>
     <string name="DEFAULT_SEGUIR">Seguir!</string>
+    <string name="DEFAULT_NO_SEGUIR">Dejar de Seguir</string>
     <string name="DEFAULT_ETIQUETAS">Etiquetas</string>
     <string name="DEFAULT_DATES_LLISTA_ESDEVENIMENT">1 i 2 de Octubre</string>
     <string name="DEFAULT_BOTON">Button</string>
