mejorado uso de MGRs en baseactivity, extraidos strings de todos los layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,4 +129,30 @@
     <string name="ELIMINAR_GRUPO">Eliminar grupo</string>
     <string name="ELIMINAR_EVENTO">Eliminar evento</string>
     <string name="EDITAR_EVENTO">Editar evento</string>
+    <string name="DEFAULT_CORREO">Correo</string>
+    <string name="DEFAULT_PASSWORD">Contraseña</string>
+    <string name="REPITE_PASSWORD">Repite contraseña</string>
+    <string name="DEFAULT_HECHO">Hecho!</string>
+    <string name="RECORDATORIO_3_TAGS">Recuerda que debes escoger un mínimo de 3 tags</string>
+    <string name="RECORDATORIO_CREAR_TAGS">Si no encuentras el tag adecuado para definir tu grupo no dudes en crearlo!</string>
+    <string name="ESCRIBE_EL_NOMBRE_TAG">Escribe el nombre del tag</string>
+    <string name="NUEVO_TAG">nuevo tag</string>
+    <string name="DEFAULT_EXAMPLE_EMAIL">example@email.com</string>
+    <string name="USUARIO_DESLOGUEADO">Usuario deslogueado</string>
+    <string name="CAMBIAR_FOTO">Cambiar foto</string>
+    <string name="editar_preferencias">Editar preferencias</string>
+    <string name="DEFAULT_EMAIL">Email:</string>
+    <string name="nickname">Nickname:</string>
+    <string name="guardar_cambios">Guardar cambios</string>
+    <string name="reiniciar_contrasena">Reiniciar contraseña</string>
+    <string name="DESLOGUEAR_TWITTER">Log out from Twitter</string>
+    <string name="editar_tags">Editar tags</string>
+    <string name="nuevo_evento">Nuevo evento</string>
+    <string name="DEFAULT_CREAR">Crear</string>
+    <string name="mis_amistades">Mis Amistades</string>
+    <string name="mis_eventos">Mis Eventos</string>
+    <string name="mis_grupos">Mis Grupos</string>
+    <string name="primera_linea">primera linea</string>
+    <string name="registrarme">Registrarme</string>
+    <string name="bio">Bio:</string>
 </resources>
