--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,7 +70,7 @@
     <string name="MES_DICIEMBRE">Diciembre</string>
     <string name="DEFAULT_EVENTO_CREADO">Evento creado</string>
     <string name="DEFAULT_CREAR_GRUPO">Crear grupo</string>
-    <string name="DEFAULT_EDITAR_GRUPO">Modificar grupo</string>
+    <string name="DEFAULT_EDITAR_GRUPO">Editar grupo</string>
     <string name="ESCRIBE_NOMBRE_GRUPO">Escribe el nombre del grupo</string>
     <string name="ESCRIBE_DESCRIPCION_GRUPO">Escribe la descripción de tu grupo</string>
     <string name="ESCRIBE_TAG_PRINCIPAL_GRUPO">Escribe el tag principal</string>
@@ -88,6 +88,7 @@
     <string name="INDICAR_TAG_GRUPO">Debe indicar un tag para el grupo</string>
     <string name="ERROR_OBRIR_IMATGE">No se ha podido abrir la imagen</string>
     <string name="DEFAULT_GRUPO_CREADO">Grupo creado</string>
+    <string name="DEFAULT_EDITAR_TAGS">Editar tags</string>
     <string name="ERROR_PASSWORDS_DIFERENTES">Las contraseñas no coinciden</string>
     <string name="DEFAULT_HORARIO">horario</string>
     <string name="EVENTO_EDITADO">Evento editado</string>
