--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,4 +157,5 @@
     <string name="registrarme">Registrarme</string>
     <string name="bio">Bio:</string>
     <string name="DEFAULT_NO_CUENTA">Todavia no tienes cuenta? Registrate!</string>
+    <string name="EXAMPLE_PASS">ExamplePass123</string>
 </resources>
