modificació d'alguns textos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,6 +156,6 @@
     <string name="primera_linea">primera linea</string>
     <string name="registrarme">Registrarme</string>
     <string name="bio">Bio:</string>
-    <string name="DEFAULT_NO_CUENTA">Todavia no tienes cuenta? Registrate!</string>
+    <string name="DEFAULT_NO_CUENTA">¿Todavía no tienes cuenta? ¡Regístrate!</string>
     <string name="EXAMPLE_PASS">ExamplePass123</string>
 </resources>
