Data al Calendar a editar evento

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="ERROR_HORAS">Horas incorrectas</string>
     <string name="ESCRIBE_DESCRIPCION_EVENTO">Escribe la descripción de tu evento</string>
     <string name="ESCRIBE_PRECIO_EVENTO">Escribe el precio del evento</string>
-    <string name="ESCRIBE_URL_ENTRADAS">En el caso que se puedan comprar online, escribe la URL de venta de entradas</string>
+    <string name="ESCRIBE_URL_ENTRADAS">Si hay entradas, escribe la URL del punto de venta. ("http:// o https://)</string>
     <string name="ESCRIBE_LUGAR_EVENTO">Escribe el lugar del evento</string>
     <string name="ESCRIBE_DIA_EVENTO">Escribe el día del evento</string>
     <string name="ERROR">Campo vacío</string>
